# team2-ipos

./: .gitignore  CONTRiBUTING.md  DEBUGGING.md  INSTRUCTIONS.md  README.md  app.py  pyproject.toml
.github/ISSUE_TEMPLATE/workflows/: Python-CI.yaml
templates/: index.html
tests/: test_frontend.py  test_tic_tac_toe.py
